<resources>
    <string name="app_name">Hello Squirrel</string>

    <string name="first_name">Ray </string>
    <string name="last_name"> Simbiri</string>
    <string name="full_name">%s %s</string>

    <string name="profile_bio_text">I love building things from scratch. Though I rarely finish all my projects because new ones get more exciting, I still love the learning journey.</string>

    <string name="profile_hobby_header_text">My  Hobbies :</string>
    <string name="profile_hobby_first_text">🥇 Soccer</string>
    <string name="profile_hobby_second_text">🥈 Poetry</string>
    <string name="profile_hobby_third_text">🥉 App development</string>
</resources>